      arrays, meaning they support UTF-8.
    - Various changes in Text class to support UTF-8.
    - Changed parameters to GraphicsUnclipped::drawText() (and subclasses).
    - Added StringIterator class, for efficient iteration over a UTF-8 string.
    - Removed dependence on WoopsiString::getCharArray().
    - Promoted FileRequester gadget from bonus folder to main library.
	
  V0.43 (20091223)
  
  - Fixes:
    - ListBox draws correctly when dragged (clipping problem from 0.41).
    - Multiple fixes to the PackedFont set of classes.
    - bmp2font checks the default Windows location for grit.
    - bmp2font adds fonts to the WoopsiUI namespace.
    - bmp2font follows #ifdef/#endif guard style.
    - bmp2font uses more appropriate casing for filenames, etc.
    - CycleButton redraws correctly when released if it contains no options.
    - Label and subclasses recalculate their text position and redraw when their
      fonts are changed.
    - TextBox does not attempt to move cursor when clicked if it contains no
      text.
    - TextBox cursor moves correctly when clicked if a PackedFont font is used.
    - Template project no longer references Gadget::Rect.
    - MultiLineTextBox redraws and adjusts text position when font is changed.
    - ListBox does not attempt to draw item -1 in list.
    - PackedFontBase::isCharBlank() returns the correct value.
    - Renamed DefaultStyle class to GadgetStyle.
    - Instance of GadgetStyle created at Woopsi startup instead of using static
      properties of DefaultStyle class.
    - Removed systemFont global; relying on defaultGadgetStyle instead.
    - Removed tinyFont global; Debug class now creates its own instance.
    - TinyFont follows class pattern used by Jeff's PackedFonts.
    - Graphics::floodFill() no longer gets stuck in an infinite loop.
    - Moved logos out of demo data folder and into new logos folder in bmp.
    - Removed unused bitmaps from demo.
    - Added missing FileListBox class.